# 100-days-of-cuda

./: .clinerules  .gitignore  .windsurfrules  CMakeLists.txt  README.md  com.github.actions.runner.plist  start-runner.fish  start-runner.sh
.github/: README.md
day001/: CMakeLists.txt  Makefile  README.md  vector_add.cu
day002/: CMakeLists.txt  README.md  matrix_add.cu
day003/: CMakeLists.txt  README.md  matrix_multiply.cu
day004/: CMakeLists.txt  README.md  partial_sum.cu
day005/: CMakeLists.txt  README.md  layer_norm.cu
day006/: CMakeLists.txt  README.md  matrix_transpose.cu
day007/: CMakeLists.txt  README.md  convolution.cu
day008/: CMakeLists.txt  README.md  brent_kung.cu
day009/: CMakeLists.txt  README.md  flash_attention.cu
day010/: CMakeLists.txt  README.md  sparse_matrix_vector_mul.cu
day011/: CMakeLists.txt  README.md  merge_sort.cu
day012/: CMakeLists.txt  README.md  bfs.h  bfs_cpu.c  bfs_cpu_gpu.cu  bfs_gpu.cu  bfs_kernel.cu  main.cu
day013/: CMakeLists.txt  README.md  bfs_optimized.cu
day014/: CMakeLists.txt  README.md  fhd_image.cu
day015/: CMakeLists.txt  README.md  cnn.cu
day016/: CMakeLists.txt  README.md  particle_system.cu
day017/: CMakeLists.txt  README.md  main.cpp  naive_bayes_kernel.cu
day018/: CMakeLists.txt  README.md  matrix_multiplication_cublas.cu
day019/: CMakeLists.txt  README.md  fft_comparison.cu  fft_visualization.cu
day020/: CMakeLists.txt  README.md  asian_option_pricing.cu  european_option_pricing.cu
day021/: CMakeLists.txt  README.md  pso_optimization.cu
day022/: CMakeLists.txt  README.md  genetic_algorithm.cu  q_learning.cu
day023/: README.md
day024/: CMakeLists.txt  README.md  glu.cu
day025/: CMakeLists.txt  README.md  passthrough_filter.cu
day026/: CMakeLists.txt  README.md  kde.cu
day027/: CMakeLists.txt  README.md  mirror_descent.cu
day028/: CMakeLists.txt  README.md  mini_batch_sgd.cu
day029/: CMakeLists.txt  README.md  k_means_assignment.cu
day030/: CMakeLists.txt  README.md  camera_avg_intensity.cu  view_grayscale.py
day031/: CMakeLists.txt  README.md  heat_simulation.cu
day032/: CMakeLists.txt  README.md  stream_overlap.cu
day033/: CMakeLists.txt  README.md  reduction_warp_shfl.cu
day034/: CMakeLists.txt  README.md  voxel_grid_filter.cu
day035/: CMakeLists.txt  README.md  kalman_predict.cu
day036/: CMakeLists.txt  README.md  cusparse_spmv.cu
day037/: CMakeLists.txt  README.md  nn_forward_pass.cu
day038/: CMakeLists.txt  README.md  batch_norm_forward.cu
day039/: CMakeLists.txt  README.md  thrust_basics.cu
day040/: CMakeLists.txt  README.md  texture_interpolation.cu  view_interpolated.py
day041/: CMakeLists.txt  README.md  radix_sort.cu
day042/: CMakeLists.txt  README.md  n_body_optimized.cu
day043/: CMakeLists.txt  README.md  cudnn_conv_fwd.cu
day044/: CMakeLists.txt  README.md  occupancy_grid.cu
day045/: CMakeLists.txt  README.md  optical_flow_gradients.cu
day046/: CMakeLists.txt  README.md  backpropagation_fc.cu
day047/: CMakeLists.txt  README.md  dynamic_parallelism_example.cu
day048/: CMakeLists.txt  README.md  aabb_collision.cu
day049/: CMakeLists.txt  README.md  perception_pipeline.cu  view_live_pipeline.py
day050/: CMakeLists.txt  README.md  vector_add_kernel.cu  vector_add_main.cu  vector_add_test.cpp
day051/: CMakeLists.txt  README.md  onnx_infer.cpp  onnx_infer_test.cpp
day052/: CMakeLists.txt  README.md  min_gru_scan.cu  min_gru_scan.h  min_gru_scan_test.cu
day053/: CMakeLists.txt  README.md  bidirectional_lstm.cu  bidirectional_lstm.h  main_lstm.cu  test_bidirectional_lstm.cu
day054/: CMakeLists.txt  README.md  adahessian.cu  adahessian.h  main_adahessian.cu  test_adahessian.cu
day055/: CMakeLists.txt  README.md  main.cu  quantization_kernels.cu  quantization_kernels.h  quantization_test.cu
day056/: CMakeLists.txt  README.md  mish_activation.cu  mish_activation.cuh  mish_activation_lib.cu  mish_activation_test.cu
day057/: CMakeLists.txt  README.md  benchmark_main.cu  cgm_cublas.cu  cgm_cublas.cuh  cgm_cublas_test.cu
day058/: CMakeLists.txt  README.md  bitonic_sort.cu  bitonic_sort.cuh  bitonic_sort_main.cu  bitonic_sort_test.cu
day059/: CMakeLists.txt  README.md  main.cu  ray_tracer.cu  ray_tracer.cuh  ray_tracer_test.cu
day060/: CMakeLists.txt  README.md  main.cu  muon_optimization.cu  muon_optimization.cuh  muon_optimization_test.cu
day061/: CMakeLists.txt  README.md  fisher_main.cu  fisher_matrix.cu  fisher_matrix.cuh  fisher_matrix_test.cu
day062/: CMakeLists.txt  README.md  batched_l2_norm.cu  batched_l2_norm.cuh  batched_l2_norm_test.cu  main.cu
day063/: CMakeLists.txt  README.md  mcl_localization.cu  mcl_localization.cuh  mcl_localization_test.cu  mcl_main.cu
day064/: CMakeLists.txt  README.md  spectral_norm.cu  spectral_norm.cuh  spectral_norm_main.cu  spectral_norm_test.cu
day065/: CMakeLists.txt  README.md  geglu.cu  geglu.cuh  geglu_main.cu  geglu_test.cu
day066/: CMakeLists.txt  README.md  audio_features.cu  audio_features.cuh  audio_features_test.cu  mfcc_main.cu
day067/: CMakeLists.txt  README.md  swiglu.cu  swiglu.cuh  swiglu_main.cu  swiglu_test.cu
day068/: CMakeLists.txt  README.md  lora.cu  lora.cuh  lora_main.cu  lora_test.cu
day069/: CMakeLists.txt  README.md  main.cu  password_cracker.cu  password_cracker.cuh  password_cracker_test.cu
day070/: CMakeLists.txt  README.md  mse.cu  mse.cuh  mse_main.cu  mse_test.cu
day071/: CMakeLists.txt  README.md  group_norm_forward.cu  group_norm_forward.cuh  group_norm_forward_test.cu  group_norm_main.cu
day072/: CMakeLists.txt  README.md  tvd_loss.cu  tvd_loss.cuh  tvd_loss_test.cu  tvd_main.cu
day073/: CMakeLists.txt  README.md  rope_embedding.cu  rope_embedding.cuh  rope_embedding_test.cu  rope_main.cu
day074/: CMakeLists.txt  README.md  rope_2d.cu  rope_2d.cuh  rope_2d_main.cu  rope_2d_test.cu
day075/: CMakeLists.txt  README.md  fused_linear_softmax_loss.cu  fused_linear_softmax_loss.cuh  fused_linear_softmax_loss_test.cu  main.cu
day076/: CMakeLists.txt  README.md  contrastive_loss.cu  contrastive_loss.cuh  (+2 more)
(+135 files in other folders)
